qt4-x11 (4:4.7.3-9) UNRELEASED; urgency=low


 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 14 Dec 2011 14:15:47 +0100

qt4-x11 (4:4.7.3-8) unstable; urgency=low

  [ Pino Toscano ]
  * Use the linux-g++ mkspec on alpha and ia64. (Closes: #640981)

  [ Sune Vuorela ]
  * Switch to firebird 2.5 given that 2.1 is currently broken.
  * Add diginotar blacklists patches, taken from upstream.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Sat, 10 Sep 2011 12:34:54 +0200

qt4-x11 (4:4.7.3-7) unstable; urgency=low

  [ Pino Toscano ]
  * Use DEB_HOST_ARCH_BITS to really detect 64bit architectures.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 10 Aug 2011 14:00:11 +0200

qt4-x11 (4:4.7.3-6) unstable; urgency=low

  [ Pino Toscano ]
  * Add patch Check-if-the-interpolators-have-already-been-deleted.patch
    to fix QVariantAnimation::registerInterpolator() crash during global dtors
    run. (Closes: #635724)
  * Add patch s390x_jscore.diff to add s390/s390x support in JavaScriptCore.
    (Closes: #636544)
  * Compile using the linux-g++-64 mkspec on s390x.
  * Improve wording in description of qt4-qmlviewer.

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Tue, 09 Aug 2011 18:27:34 +0200

qt4-x11 (4:4.7.3-5) unstable; urgency=low

  [ Fathi Boudra ]
  * Add support for vendor specifics in debian/rules.

  [ Pino Toscano ]
  * Revert the switch to GL ES 2 on armel and armhf architectures for now,
    as it is binary incompatible and creates issues with code explicitly
    using GL API. (Closes: #632602)

 -- Debian Qt/KDE Maintainers <debian-qt-kde@lists.debian.org>  Wed, 06 Jul 2011 03:42:41 +0300

qt4-x11 (4:4.7.3-4) unstable; urgency=low

  * Update Fix_fontconfig_usage_in_X11_font_database.patch to fix crashes in
    various Qt/KDE applications. (Closes: #631652)

 -- Fathi Boudra <fabo@debian.org>  Sat, 25 Jun 2011 21:22:37 +0300

qt4-x11 (4:4.7.3-3) unstable; urgency=low

  [ Fathi Boudra ]